# OpenGL-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dev_notes.txt  generate_windows_makefiles.bat  premake5.lua
OGLRenderer/: CMakeLists.txt
OGLRenderer/src/: Engine.cpp  Engine.h  ResourceManager.cpp  ResourceManager.h
OGLRenderer/src/Core/: GUISystem.cpp  GUISystem.h  RenderSystem.cpp
OGLRenderer/src/Graphics/: GLShaderProgramFactory.cpp
bin-int/Debug-windows-x86_64/OGLRenderer/: AABB.d  Camera.d  DemoCrytekSponza.d  Engine.d  GLFramebuffer.d  GLShaderProgram.d  GLShaderProgramFactory.d  GLVertexArray.d  GUISystem.d  Mesh.d  Model.d  PBRMaterial.d  RenderSystem.d  ResourceManager.d  SceneBase.d  Skybox.d  ViewFrustum.d  WindowSystem.d  main.d  stb_image_implementation.d
bin-obj/Debug-windows-x86_64/OGLRenderer/: AABB.d
